[package]
name = "disting-wav-2-playlist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
musical_scales = "0.2"
clap  = { version = "3.0", features = ["derive"]}
regex = "1.5"
lazy_static = "1.4.0"
env_logger = "0.9"
log = "0.4"
